# thermal-placement

./: .gitingnore  ILP_MODELING_GUIDE.md  QUICK_START.md  README.md  X11_SETUP.md  check_x11.sh  pyproject.toml  quick_setup_x11.sh  setup_x11.sh  test_exclusion.py  分析报告.md  排除解约束说明.md
baseline/ICCAD23/: .gitignore  README.MD  requirements.txt
benchmark/: input_preprocess.py
output/: constraints_solution_1.lp  constraints_solution_10.lp  constraints_solution_11.lp  constraints_solution_12.lp  constraints_solution_13.lp  constraints_solution_14.lp  constraints_solution_15.lp  constraints_solution_16.lp  constraints_solution_17.lp  constraints_solution_18.lp  constraints_solution_19.lp  constraints_solution_2.lp  constraints_solution_20.lp  constraints_solution_21.lp  constraints_solution_22.lp  constraints_solution_23.lp  constraints_solution_24.lp  constraints_solution_25.lp  constraints_solution_3.lp  constraints_solution_4.lp  constraints_solution_5.lp  constraints_solution_6.lp  constraints_solution_7.lp  constraints_solution_8.lp  constraints_solution_9.lp
src/: 1  constraint_analysis.md  ilp_method.py  ilp_method_gurobi.py  ilp_reduce_EMIB_search_gurobi.py  ilp_sub_solution_search.py  ilp_sub_solution_search_gurobi.py  input_process.py  load_test_input.py  rl_a2c_method.py  rl_dqn_method.py  rl_learning.py  rl_method.py  rl_ppo_method.py  rl_tool.py  run_test_case.py  tool.py
tests/: README_batch_test.md  batch_test_solutions.py  batch_test_solutions_gurobi.py  batch_test_solutions_gurobi_EMIB.py  run_all_tests.sh  run_all_tests_EMIB.sh  test_smoke.py
(+29091 files in other folders)
